# extropy

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  REVIEW.md  TODO.md  agents.json  network.json  phase1-process.md  pyproject.toml  surgeons.yaml  surgeons_base.yaml  test_search.py
.claude/: hooks.json
.cursor/plans/: entropy-phase-1-implementation-20100bd4.plan.md
.github/workflows/: claude-code-review.yml
docs/: CAPABILITIES.md  WORKFLOW.md  architecture.md  atd-technical-instructions.md  capabilities.md  commands.md  fixes.md  logging-guidelines.md  phase1-currentflow.md  roadmap.md  showcase-pipeline.md  simulation-experience-gaps.md  simulation-v2-architecture.md  simulation.md  skill-rewrite-plan.md  study-2-iran-strikes.md  use-cases.md
docs/branch-notes/: steps1-3-hardening.md
docs/pipeline/: network.md  persona.md  sample.md  scenario.md  simulate.md  spec.md
docs/plans/: cli-refactor.md  (+1 more)
entropy/: __init__.py  api.py  cli.py  cli_utils.py  config.py  db.py  llm.py  models.py  population.py  scenario.py  search.py  spec.py
examples/: population.v1.yaml
extropy/: __init__.py  config.py
plans/: phase1-todo.md  phase1.md
test-v2-e2e/: extended.network-config.default.seed42.20260215-233218.yaml  extended.network-config.default.seednoseed.20260215-231703.yaml  extended.persona.yaml  extended.scenario.yaml  extended.yaml  prompt.txt  spec.yaml
tests/: __init__.py  conftest.py  test_agent_focus.py  test_binder.py  test_cli.py  test_compiler.py  test_conversations.py  test_conviction.py  test_engine.py  test_estimator.py  test_household_hydrator.py  test_household_sampling.py  test_integration_timestep.py  test_llm.py  test_logging.py  test_memory_traces.py  test_models.py  test_modifier_precedence.py  test_name_generator.py  test_network.py  test_network_config_generator.py  test_paths.py  test_persona_generator.py  test_persona_renderer.py  test_persona_validator.py  test_progress.py  test_propagation.py  test_providers.py  test_rate_limiter.py  test_reasoning_execution.py  test_reasoning_prompts.py  test_resource_governor.py  test_sampler.py  test_scenario.py  test_scenario_interaction.py  test_scenario_sufficiency.py  test_scenario_validator.py  test_simulation.py  test_stopping.py  test_structural_edges.py  (+2 more)
todo/: bug-conviction-center-bias.md  code-fixes.md  code-review.md
todos/: expression_constraint_violations.md  generalize_constraint_enforcement.md  generalize_persona_generation.md  issue1_validation_solution.md  phase1.md  plan.md  prompt_alignment_with_capabilities.md  standardize_cli_validation.md
(+414 files in other folders)
