[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "extropy-run"
dynamic = ["version"]
description = "Predictive intelligence through agent-based population simulation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Devesh Paragiri" },
]
keywords = ["simulation", "agent-based", "population", "predictive-intelligence", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12.0,<1",
    "rich>=13.0.0,<14",
    "openai>=1.50.0,<2",
    "numpy>=2.0.0,<3",
    "scipy>=1.14.0,<2",
    "networkx>=3.4.0,<4",
    "pydantic>=2.9.0,<3",
    "python-dotenv>=1.0.0,<2",
    "pyyaml>=6.0.0,<7",
    "anthropic>=0.77.0,<1",
    "faker>=37.11.0,<38",
    "iso3166>=2.1.1,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.0",
]

[project.urls]
Homepage = "https://github.com/exaforge/extropy"
Repository = "https://github.com/exaforge/extropy"
Issues = "https://github.com/exaforge/extropy/issues"

[project.scripts]
extropy = "extropy.cli:app"

[tool.hatch.version]
path = "extropy/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["extropy"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
